# hash_practice

./: CMakeLists.txt
src/: custom_hash.cc  custom_hash.h
tests/: test_hash.cc
